# Fast-Api

./: .gitignore  pyproject.toml  test.ps1
.github/workflows/: ci.yml
